WIP - built a CNN from scratch

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -968,7 +968,20 @@
     "\n",
     "model = Sequential()\n",
     "\n",
-    "### TODO: Define your architecture.\n",
+    "model.add(Conv2D(filters=16, kernel_size=4, padding='same', activation='relu', input_shape=(224, 224, 3)))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "model.add(Conv2D(filters=32, kernel_size=4, padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "model.add(Conv2D(filters=64, kernel_size=4, padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "model.add(Conv2D(filters=128, kernel_size=2, padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "model.add(Conv2D(filters=256, kernel_size=2, padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dropout(0.1))\n",
+    "model.add(Dense(256, activation='relu'))\n",
+    "model.add(Dense(133, activation='softmax'))\n",
     "\n",
     "model.summary()"
    ]
@@ -1024,7 +1037,7 @@
     "\n",
     "### TODO: specify the number of epochs that you would like to use to train the model.\n",
     "\n",
-    "epochs = ...\n",
+    "epochs = 7\n",
     "\n",
     "### Do NOT modify the code below this line.\n",
     "\n",
